<resources>
    <string name="app_name">AndroidProjectPDG</string>
    <string name="header">Header</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="next">Next</string>
    <string name="logup">Do not have an account yet?</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="helpEmail">Help email</string>
    <string name="usuario">Usuario registrado</string>
    <string name="guardar">Save</string>
    <string name="cancelar">Cancell</string>
    <string name="guardar_con_exito">Saved successfully</string>
    <string name="error_al_guardar">Error when saving</string>
    <string name="accion_cancelada">Canceled action</string>
    <string name="actualizar">Update</string>
    <string name="borrar">Delete</string>
    <string name="actualizacion_con_exito">Successful update</string>
    <string name="error_actualizar">Error updating</string>
    <string name="confirmacion">Confirmation</string>
    <string name="realmente_borrar">Do you really want to delete the item</string>
    <string name="aceptar">Accept</string>
    <string name="borrado_con_exito">It was successfully removed</string>
    <string name="error_eliminar">Failed to delete</string>
    <string name="registro">Record</string>
    <string name="imgFondo">Imagen encabezado del layout activity_login</string>
    <string name="Propiedades">La casa de tus sueños</string>
    <string name="correoSinVerificar">¡Correo no verificado!</string>
    <string name="reenvioCorreo">Reenviar correo de verificación</string>
    <string name="bienvenida">Bienvenido</string>
    <string name="accederApp">Acceder a la App</string>
    <string name="autenticacionExito">Autenticación exitosa</string>
    <string name="correoVerifEnviado">El correo de verificación ha sido enviado</string>
    <string name="correoVerifNoEnviado">No se pudo enviar el correo de verificación</string>
    <string name="usuarioCreado">Usuario creado</string>
    <string name="restablecerContrasenia">Restablecer contraseña</string>
    <string name="recibirEnlace">Ingrese su correo para recibir el enlace que permitirá reestablecer su password</string>
    <string name="enviar">Enviar</string>
    <string name="enlaceEnviado">El enlace para reestablecer la contraseña ha sido enviado a su correo</string>
    <string name="enlaceNoEnviado">El enlace no se ha podido enviar:</string>
    <string name="ingresarCorreo">Favor de ingresar la dirección de correo</string>
    <string name="correoRequerido">Se requiere el correo</string>
    <string name="passNoCumpleTamanio">Se requiere una contraseña o la contraseña no tiene por lo menos 6 caracteres</string>
    <string name="formatoCorreoIncorrecto">Error: El correo electrónico no tiene un formato correcto</string>
    <string name="formatoCorreoIncorrecto2">El correo electrónico no tiene un formato correcto</string>
    <string name="contraseniaNoValida">Error: La contraseña no es válida</string>
    <string name="contraseniaNoValida2">La contraseña no es válida</string>
    <string name="correoDuplicadoConDatosDiferentes">Error: Una cuenta ya existe con el mismo correo, pero con diferentes datos de ingreso</string>
    <string name="correoEnUsoOtraCuenta">Error: el correo electrónico ya está en uso con otra cuenta.</string>
    <string name="sesionxpiro">Error: La sesión ha expirado. Favor de ingresar nuevamente.</string>
    <string name="noExisteUsuario">Error: No existe el usuario con la información proporcionada.</string>
    <string name="contraseniaInvalida">La contraseña porporcionada es inválida</string>
    <string name="tamanioContrasenia">La contraseña debe de tener por lo menos 6 caracteres</string>
    <string name="redNoDisponible">Red no disponible o se interrumpió la conexión</string>
    <string name="autenticacionNoExitosa">Error: No se pudo autenticar exitosamente.</string>
    <string name="aviso">Aviso</string>
    <string name="CorreoVerificacionEnviado">El correo de verificación ha sido enviado</string>
    <string name="correoVerificacionNoEnvido">Error: El correo de verificación no se ha podido enviar</string>
    <string name="permisoRequerido">Permiso requerido</string>
    <string name="permisoUsuarioPosicion">Se necesita el permiso para poder ubicar la posición del usuario en el mapa</string>
    <string name="entendido">Entendido</string>
    <string name="salir">Salir</string>
    <string name="permisoUbicacionNegadoPermanentemente">El permiso de ubicación se ha negado permanentemente</string>
    <string name="regresar">Regresar</string>
    <string name="imagenPropiedad">Imagen Propiedad</string>
    <string name="callePropiedad">Calle y número</string>
    <string name="coloniaPropiedad">Colonia</string>
    <string name="MunicipioPropiedad">Municipio</string>
    <string name="estado">Estado</string>
    <string name="m2_terreno">m2 terreno</string>
    <string name="m2_construccion">m2 construcción</string>
    <string name="descripcionPropiedad">Descripción</string>
    <string name="latitud">Latitud</string>
    <string name="longitud">Longitud</string>
    <string name="correo_usuario">Correo usuario</string>
    <string name="ver_mas_detalles">ver ubicación</string>
    <string name="diplomado">© Diplomado Móviles</string>
    <string name="topFive">en la capital poblana y sus alrededores</string>
    <string name="email">Correo electrónico</string>
    <string name="pass">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarse">Registrarse</string>
    <string name="restablecerPass">¿Olvidó su contraseña? Restablecer aquí</string>
    <string name="caratulaLogin">Contenido elementos para el ingreso por correo y pass</string>
    <string name="desactivarIngreso">Desactivar ingreso con huella</string>
    <string name="activar_ingreso">Activar ingreso con huella</string>
    <string name="tituloDetalle">Propiedad</string>
    <string name="namePropiedad">NombrePropiedad</string>
    <string name="estatus">Estatus</string>
    <string name="tipoPropiedad">Tipo</string>
    <string name="precioPropiedad">Precio</string>
    <string name="lblpropiedad">Propiedad:</string>
    <string name="lblestatus">Estatus:</string>
    <string name="lbltipo">Tipo:</string>
    <string name="lblprecio">Precio:</string>
    <string name="lblpoint">.</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="ver_propiedades">Ver Propiedades</string>
    <string name="reporte_visitas">Reporte Visitas</string>
    <string name="fecha">Fecha:</string>
    <string name="fecha_visita">¿Fecha visita?</string>
    <string name="inicio">Inicio:</string>
    <string name="inicia">Inicia:</string>
    <string name="finaliza">Finaliza:</string>
    <string name="asesor">Asesor:</string>
    <string name="asesor2">Asesor</string>
    <string name="propiedad">Propiedad:</string>
    <string name="nombre_de_la_propiedad">Nombre de la Propiedad</string>
    <string name="cliente">Cliente:</string>
    <string name="cel_jefe">Cel jefe:</string>
    <string name="mensaje">Mensaje:</string>
    <string name="me_siento_en_peligro">Me siento en peligro</string>
    <string name="_5544568728">5544568728</string>
    <string name="enviar_sms">Enviar SMS</string>

</resources>