<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.BienvenidaActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:contentDescription="@string/imgFondo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/alfombraroja200"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Propiedades"
                    android:textColor="@color/rosaMexicano"
                    android:textSize="30sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/topFive"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvCorreoNoVerificado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:text="@string/correoSinVerificar"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:visibility="gone"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnReenviarVerificacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/cremaAmarillento"
                app:cornerRadius="16dp"
                android:textSize="15sp"
                android:text="@string/reenvioCorreo"
                android:textAllCaps="false"
                android:visibility="gone"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/bienvenida"
                android:layout_marginTop="20dp"
                android:textColor="@color/rosaIntenso"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="#001764"
                android:textSize="18sp"
                tools:text="@string/correo_usuario" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAccederApp"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:backgroundTint="@color/rosa"
                android:text="@string/accederApp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:cornerRadius="16dp" />


            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="10dp"
                android:background="@color/AzulTurq" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>